# poor-house-dub-v2

./: .gitignore  GPIO_WIRING_GUIDE.md  HARDWARE.md  LICENSE  MINIMAL_BUILD.md  PCB_COMPONENT_COORDINATES.csv  PCB_LAYOUT_SPEC.md  PCB_SCHEMATIC.md  PCM5102_TROUBLESHOOTING.md  PI_ZERO_TEST_GUIDE.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  audio_output.py  clean_install_from_main.sh  gpio_cleanup.py  gpio_cleanup.sh  gpio_controller.py  index.html  install.sh  main.py  pi_audio_test.py  pi_install.sh  pi_standalone_install.sh  pi_test_gpio.py  requirements.txt  setup.sh  synthesizer.py  update_to_custom_audio_branch.sh
.github/workflows/: README.md  test.yml
assets/audio/: README.md
cpp/: CMakeLists.txt  README.md  install.sh  setup.sh
cpp/include/Audio/: AudioEngine.h  AudioOutput.h  SamplePlayer.h
cpp/include/DSP/: Envelope.h  Reverb.h
cpp/include/Hardware/: GPIOController.h  LEDController.h
cpp/src/: main.cpp
cpp/src/Audio/: AudioEngine.cpp  AudioOutput.cpp  SamplePlayer.cpp
cpp/src/DSP/: Envelope.cpp  Filter.cpp  Reverb.cpp
cpp/src/Hardware/: GPIOController.cpp  LEDController.cpp
